welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: not found: value &&
  	&& (getY() == getMondeHauteur() - 1)
        ^